<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsActivity">


    <Button
        android:id="@+id/goToProfButton"
        android:layout_height="60dp"
        android:layout_width="75dp"
        android:textSize="12dp"
        android:text="@string/profile_label"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:onClick="goProfile"
        />

    <TextView
        android:id="@+id/items"
        style="@style/TextStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:text="@string/items_label"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/searchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/items"
        android:text="SEARCH: "
        android:textSize="18dp"
        android:background="@color/darkGrey"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        />

    <EditText
        android:id="@+id/searchInput"
        android:layout_toRightOf="@id/searchID"
        android:layout_below="@+id/items"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint=" ... "
        android:background="@android:color/white"
        />

    <Spinner
        android:id="@+id/filter"
        android:layout_toRightOf="@+id/searchButton"
        android:text="@string/spinner_title"
        android:layout_below="@+id/items"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"

        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="27dp"
        android:layout_height="23dp"
        android:layout_below="@id/items"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/searchInput"
        android:background="@drawable/search" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchID"
        >
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/lightGrey"
            android:layout_below="@+id/searchID"
            android:divider="@color/darkGrey"
            android:shrinkColumns="1"
            >


<!--
        <TableRow>

        <ImageView
            android:id="@+id/item1Image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/furnlogo"
            />

            <TextView
                android:layout_width="169dp"
                android:layout_height="fill_parent"
                android:text="Oak Chair\n Min Bid: $50"
                android:textSize="24dp"
                />


            <Button
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_column="1"
                android:onClick="goDescription"
                android:text="BID!" />


        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/item2Image"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:src="@drawable/artlogo"
                />

            <TextView
                android:text="Artwork by James Smith \n Min Bid: $125"
                android:textSize="24dp"
                />

            <Button
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_column="1"
                android:onClick="goDescription"
                android:text="BID!"
                />


        </TableRow>
        -->

        </TableLayout>
    </ScrollView>

</RelativeLayout>


